Add authentication to REST service
Enables authentication on the REST service when Keycloak usage is enabled. With this, all endpoints - except for the ping - can only be used by authenticated users.
If Keycloak usage is disabled, the endpoints can still be accessed anonymously as before.

* Add authentication to service and extend service config map with keycloak parameters
* Regenerate common OpenAPI
* Extend common JS API to allow passing the access token
* Refactor common JS API to accept an optional request options objects instead of separate parameters (e.g. timeout) to configure calls
* Add doc to Minikube README on how to test locally build docker images
* Extend landing page to hand access token to API if available
* CI: Build landing page against committed common package (before it built against the released version)

Fixes #35

Contributed on behalf of STMicroelectronics
